static/css/common.css
@media all and (max-width: 992px){
    #progressBar{
        display: none !important;
    }
    #main a{
        width: 80vw;
    }
    #list {
    display: grid;
    grid-template-columns: 100% !important;
}
}
@media all and (min-width: 992px){
    #main a{
        width: 10vw;
    }
    #list {
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
}
}
* {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

body {
    background-color: #F5F5F5;
}

header img{
    width: 300px;
}

#main,
#progressBar,
#list {
    text-align: center;
}

#progressBar {
    width: 60vw;
    position: fixed;
    left: 20vw;
    bottom: 50px;
    font-size: 0;
    grid-template-columns: 1/6 1/6 1/6 1/6 1/6 1/6 1/6;
}

#progressBar > div {
    display: inline-block;
    font-size: 18px;
    width: 10vw;
    padding: 5px 0;
    box-sizing: border-box;
    background-color: #FFFFFF;
    border-top: 5px solid #DCDCDC;
    color: #C6C6D4;
    border-left: 1px solid #F5F5F5;
    border-right: 1px solid #F5F5F5;
}

.progressed {
    background-color: #EAF7F6 !important;
    border-top: 5px solid #038775 !important;
    color: #038775 !important;
}

#main a {
    padding-bottom: 30px;
    display: inline-block;
    background-color: white;
    color: black;
    text-decoration: none;
    font-weight: bold;
    border-radius: 1vw;
    box-shadow: 3px 4px 19px -2px rgba(0, 0, 0, 0.5);
    transition: .3s linear;
}

#main a:hover {
    background-color: #e8e8e8;
    box-shadow: 9px 10px 19px -2px rgba(0, 0, 0, 0.7);
}

img {
    width: 100%;
}

#list a {
    margin: 20px auto;
}

a p {
    margin: 0;
    transform: translate(0, 1vw)
}

.desc {
    font-weight: normal !important;
}

.materials-page a {
    min-height: calc(13vw + 20px) !important;
}
.alert{
    padding: 20px 20px;
    color: red;
    font-size: 24px;
    font-weight: bold;
}

.list1{
    grid-template-columns: 100% !important;
}
.list2{
    grid-template-columns: 50% 50% !important;

}
.list3{
    grid-template-columns: 33% 33% 33% !important;

}
.list4{
    grid-template-columns: 25% 25% 25% 25% !important;
}
#cookiesPopUp{
    background-color: #464646;
    color: white;
    padding: 20px;
    position: fixed;
    width: 200px;
    right: 40px;
    bottom: 95px;
}
#cookiesPopUp>p:first-of-type{
    font-size: 20px;
}
#cookiesPopUp>button{
    background-color: black;
    color: white;
    border: none;
    font-size:16px;
    padding: 5px;
    cursor: pointer;
}

